--- a/control_lamps_web_interface/Pages/Shared/_Layout.cshtml
+++ b/control_lamps_web_interface/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Control_Lamps">Control_Lamps</a>
+                        </li>
                     </ul>
                 </div>
             </div>
