--- a/control_lamps_web_interface/Pages/Control_Lamps.cshtml
+++ b/control_lamps_web_interface/Pages/Control_Lamps.cshtml
@@ -11,9 +11,15 @@
     <input asp-for="Input.Name" class="col-md-5" />
     <span asp-validation-for="Input.Name" class="text-danger"></span>
     <br />
-    <label asp-for="Input.Color"></label>
+    @*<label asp-for="Input.Color"></label>*@
     @*<input asp-for="_message.Text" class="form-control" rows="4" />*@
-    <textarea asp-for="Input.Color" class="form-control" rows="3" id="message"></textarea>
+    <select asp-for="Input.Color" name="Colors" >
+        <option value="White">Select a color</option>
+        <option value="Yellow">Yellow</option>
+        <option value="Red">Red</option>
+        <option value="Blue">Blue</option>
+        <option value="White">White</option>
+    </select>
     <span asp-validation-for="Input.Color" class="text-danger"></span>
     <br />
 
